--- a/book-keeper/style.css
+++ b/book-keeper/style.css
@@ -50,7 +50,9 @@ button:hover {
     margin: 0 11px 22px;
     display: flex;
     position: relative;
-    
+    transition: all 300ms ease;
+    user-select: none;
+    cursor: pointer;
 }
 
 .item:hover {
@@ -85,6 +87,17 @@ top: -14px;
 right: -14px;
 font-size: 16px;
 z-index: 2px;
+}
+
+.fa-up-right-from-square {
+    color: var(--black);
+    opacity: 0.7;
+    margin-left: 10px;
+    height: 100%;
+} 
+
+.item:hover .fa-up-right-from-square  {
+    color: var(--primary-color);
 }
 
 .modal-container {
