--- a/connect-four-game/css/game.css
+++ b/connect-four-game/css/game.css
@@ -44,6 +44,7 @@ input::-ms-clear {
 
 button {
   cursor: pointer;
+  background-color: unset;
 }
 
 button::-moz-focus-inner {
@@ -83,6 +84,7 @@ h1 {
   font-weight: 700;
   font-size: 56px;
   line-height: 71px;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -90,6 +92,7 @@ h2 {
   font-weight: 700;
   font-size: 24px;
   line-height: 31px;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -97,6 +100,7 @@ h3 {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
+  text-transform: uppercase;
 }
 
 h4 {
@@ -104,6 +108,7 @@ h4 {
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
+  text-transform: uppercase;
 }
 
 p {
@@ -121,52 +126,230 @@ body {
 }
 
 .menu-container {
+  position: relative;
   background-color: hsl(257, 100%, 64%);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 40px 50px;
+  padding: 50px 40px 60px;
   border-radius: 40px;
   border: 3px solid hsl(0, 0%, 0%);
   box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   max-width: 480px;
   width: 95%;
 }
+.menu-container.white {
+  background-color: hsl(0, 0%, 100%);
+  padding: 30px 34px 44px;
+}
 
 .buttons {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
   width: 100%;
 }
 
 .button {
-  background: hsl(0, 0%, 100%);
-  border: 3px solid hsl(0, 0%, 0%);
-  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   border-radius: 20px;
-  padding: 20px 21px 20px;
-  width: 100%;
   font-family: "Space Grotesk";
   font-weight: 700;
-  font-size: 24px;
-  color: hsl(0, 0%, 0%);
+  text-transform: uppercase;
+  text-align: center;
 }
 .button.primary {
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 0%);
   background-color: hsl(41, 100%, 70%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 13px 17px 13px 20px;
 }
+.button.secondary {
+  background: hsl(0, 0%, 100%);
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 0%);
+  padding: 13px 17px 13px 20px;
+}
+.button.tetriary {
+  background-color: hsl(257, 67%, 51%);
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  padding: 9px 20px 10px;
+}
+.button.red {
+  background: hsl(347, 97%, 70%);
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 100%);
+  padding: 13px 17px 13px 20px;
+}
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
 
 body {
   background-color: hsl(257, 100%, 64%);
+  display: grid;
+  column-gap: min(3vw, 60px);
+  grid-template-columns: 1fr 632px 1fr;
+  grid-template-rows: 17vh 1fr;
+  grid-template-areas: ". header ." "player1 game player2";
 }
 
-.container {
-  max-width: 632px;
-  margin: 0 auto;
+header {
+  grid-area: header;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+header .logo {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#menu {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+#menu h1 {
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+
+#rules {
+  background-color: hsl(257, 100%, 64%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  text-align: left;
+}
+#rules h1 {
+  text-align: center;
+}
+#rules h3 {
+  color: hsl(257, 100%, 64%);
+  padding-bottom: 16px;
+  padding-top: 29px;
+}
+#rules li {
+  padding-left: 27px;
+  position: relative;
+  list-style: none;
+  margin-bottom: 10px;
+}
+#rules li::before {
+  content: counter(list-item);
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-family: "Space Grotesk";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-transform: uppercase;
+}
+#rules button {
+  position: absolute;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+main {
+  grid-area: game;
+}
+main ul {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  transition: 1s all;
+}
+main ul.marker::before {
+  content: url("../assets/images/marker-red.svg");
+  width: 38px;
+  height: 37px;
+  position: absolute;
+  top: -48px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+main li {
+  height: 87.5px;
+  transition: 1s all;
+}
+main .white-board {
+  position: absolute;
+  left: 0;
+  top: 0;
+  user-select: none;
+}
+main .counter {
+  position: relative;
+}
+main .counter.red {
+  background: url(../assets/images/counter-red-large.svg) no-repeat;
+  background-position: center;
+}
+main .counter.yellow {
+  background: url(../assets/images/counter-yellow-large.svg) no-repeat;
+  background-position: center;
+}
+main .counter.win:after {
+  content: "";
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border: solid 6px hsl(0, 0%, 100%);
+  border-radius: 50%;
+}
+main .turn {
+  background: url(../assets/images/turn-background-red.svg) no-repeat;
+  width: 197px;
+  height: 167px;
+  padding: 40px 0 16px;
+  text-align: center;
+  margin: -50px auto;
+  position: relative;
+  z-index: 3;
+}
+main .turn h1 {
+  text-transform: unset;
 }
 
 .game-container {
@@ -177,31 +360,47 @@ body {
   background-image: url(../assets/images/board-layer-black-large.svg);
   height: 594px;
   display: flex;
-  padding: 8px 8px 52px;
+  padding: 8px 8px 57px;
 }
 
-ul {
-  width: 100%;
-  display: flex;
-  flex-direction: column-reverse;
-  transition: 1s all;
+aside {
+  position: relative;
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 20px;
+  border: 3px solid hsl(0, 0%, 0%);
+  text-align: center;
+  align-self: flex-start;
+  width: 140px;
+  height: 160px;
+  padding: 46px 0 0;
+  margin-top: 195px;
 }
 
-li {
-  height: 88px;
-  transition: 1s all;
-}
-
-.white-board {
+aside img {
   position: absolute;
-  left: 0;
-  top: 0;
-  user-select: none;
+  top: -29.5px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.counter {
-  display: block;
-  transition: 1s all;
-  margin: 0 auto;
-  padding: 9px;
+.player-1 {
+  grid-area: player1;
+  justify-self: end;
+}
+
+.player-2 {
+  grid-area: player2;
+  justify-self: start;
+}
+
+footer {
+  background-color: hsl(257, 67%, 51%);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: calc(17vh + 544px);
+  z-index: -1;
+  border-radius: 60px 60px 0px 0px;
 }/*# sourceMappingURL=game.css.map */
