--- a/connect-four-game/css/main-menu.css
+++ b/connect-four-game/css/main-menu.css
@@ -44,6 +44,7 @@ input::-ms-clear {
 
 button {
   cursor: pointer;
+  background-color: unset;
 }
 
 button::-moz-focus-inner {
@@ -83,6 +84,7 @@ h1 {
   font-weight: 700;
   font-size: 56px;
   line-height: 71px;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -90,6 +92,7 @@ h2 {
   font-weight: 700;
   font-size: 24px;
   line-height: 31px;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -97,6 +100,7 @@ h3 {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
+  text-transform: uppercase;
 }
 
 h4 {
@@ -104,6 +108,7 @@ h4 {
   font-weight: 700;
   font-size: 16px;
   line-height: 21px;
+  text-transform: uppercase;
 }
 
 p {
@@ -121,43 +126,81 @@ body {
 }
 
 .menu-container {
+  position: relative;
   background-color: hsl(257, 100%, 64%);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 40px 50px;
+  padding: 50px 40px 60px;
   border-radius: 40px;
   border: 3px solid hsl(0, 0%, 0%);
   box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   max-width: 480px;
   width: 95%;
 }
+.menu-container.white {
+  background-color: hsl(0, 0%, 100%);
+  padding: 30px 34px 44px;
+}
 
 .buttons {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
   width: 100%;
 }
 
 .button {
-  background: hsl(0, 0%, 100%);
-  border: 3px solid hsl(0, 0%, 0%);
-  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   border-radius: 20px;
-  padding: 20px 21px 20px;
-  width: 100%;
   font-family: "Space Grotesk";
   font-weight: 700;
-  font-size: 24px;
-  color: hsl(0, 0%, 0%);
+  text-transform: uppercase;
+  text-align: center;
 }
 .button.primary {
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 0%);
   background-color: hsl(41, 100%, 70%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 13px 17px 13px 20px;
+}
+.button.secondary {
+  background: hsl(0, 0%, 100%);
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 0%);
+  padding: 13px 17px 13px 20px;
+}
+.button.tetriary {
+  background-color: hsl(257, 67%, 51%);
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  padding: 9px 20px 10px;
+}
+.button.red {
+  background: hsl(347, 97%, 70%);
+  border: 3px solid hsl(0, 0%, 0%);
+  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+  padding: 20px 21px 20px;
+  width: 100%;
+  font-size: 24px;
+  color: hsl(0, 0%, 100%);
+  padding: 13px 17px 13px 20px;
+}
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 body {
