--- a/connect-four-game/scss/_general.scss
+++ b/connect-four-game/scss/_general.scss
@@ -1,13 +1,37 @@
 @import "zeroing";
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap');
 
-// Colors 
- $black: hsl(0°, 0%, 0%);
- $dark-purple: hsl(257°, 67%, 51%);
- $light-purple: hsl(257°, 100%, 64%);
- $red: hsl(347°, 97%, 70%);
- $yellow: hsl(41°, 100%, 70%);
- $white: hsl(0°, 0%, 100%);
+// Variables
+$black: hsl(0°, 0%, 0%);
+$dark-purple: hsl(257°, 67%, 51%);
+$light-purple: hsl(257°, 100%, 64%);
+$red: hsl(347°, 97%, 70%);
+$yellow: hsl(41°, 100%, 70%);
+$white: hsl(0°, 0%, 100%);
+
+$radius: 40px; 
+$btn-radius: 20px;
+$box-shadow: 0px 10px 0px $black;
+$border: 3px solid $black;
+
+$turn: null;
+$marker-img: null;
+
+body.pl1 {
+    $turn: "player-1" !global;
+}
+
+body.pl2 {
+    $turn: "player-2" !global;
+}
+
+@if $turn == "player-1" {
+    $marker-img: url("../assets/images/marker-yellow.svg");
+}
+
+@if $turn == "player-2" {
+    $marker-img: url("../assets/images/marker-red.svg");
+}
 
 //  Typography
 h1 {
@@ -15,6 +39,7 @@ h1 {
     font-weight: 700;
     font-size: 56px;
     line-height: 71px;
+    text-transform: uppercase;
 }
 
 h2 {
@@ -22,6 +47,7 @@ h2 {
     font-weight: 700;
     font-size: 24px;
     line-height: 31px;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -29,6 +55,7 @@ h3 {
     font-weight: 700;
     font-size: 20px;
     line-height: 26px;
+    text-transform: uppercase;
 }
 
 h4 {
@@ -36,6 +63,7 @@ h4 {
     font-weight: 700;
     font-size: 16px;
     line-height: 21px;
+    text-transform: uppercase;
 }
 
 p {
@@ -49,8 +77,7 @@ p {
 
 // Other
 
-$radius: 40px; 
-$btn-radius: 20px;
+
 
 // General 
  body {
@@ -59,41 +86,82 @@ $btn-radius: 20px;
  }
 
  .menu-container {
+    position: relative;
     background-color: $light-purple;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 40px 50px;
+    padding: 50px 40px 60px;
     border-radius: $radius;
-    border: 3px solid $black;
-    box-shadow: 0px 10px 0px $black ;
+    border: $border;
+    box-shadow: $box-shadow;
     max-width: 480px;
     width: 95%;
+    &.white {
+        background-color: $white;
+        padding: 30px 34px 44px;
+    }
  }
 
  .buttons {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
  }
 
  .button {
-    background: $white;
-    border: 3px solid $black;
-    box-shadow: 0px 10px 0px $black;
     border-radius: 20px;
-    padding: 20px 21px 20px;
-    width: 100%;
     font-family: 'Space Grotesk';
     font-weight: 700;
-    font-size: 24px;
-    color: $black;
+    text-transform: uppercase;
+    text-align: center;
+
     &.primary {
+        border: $border;
+        box-shadow: $box-shadow;
+        padding: 20px 21px 20px;
+        width: 100%;
+        font-size: 24px;
+        color: $black;
         background-color: $yellow;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 13px 17px 13px 20px;
     }
+    &.secondary {
+        background: $white;
+        border: $border;
+        box-shadow: $box-shadow;
+        padding: 20px 21px 20px;
+        width: 100%;
+        font-size: 24px;
+        color: $black;
+        padding: 13px 17px 13px 20px;
+    } 
+    &.tetriary {
+        background-color: $dark-purple;
+        color: white;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: center;
+        padding: 9px 20px 10px;
+    }
+    &.red {
+        background: $red;
+        border: $border;
+        box-shadow: $box-shadow;
+        padding: 20px 21px 20px;
+        width: 100%;
+        font-size: 24px;
+        color: $white;
+        padding: 13px 17px 13px 20px; 
+    }
  }
+
+//  Activations
+
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
