--- a/connect-four-game/scss/_zeroing.scss
+++ b/connect-four-game/scss/_zeroing.scss
@@ -27,7 +27,7 @@ html,body{
 input,button,textarea{font-family:inherit;}
 
 input::-ms-clear{display: none;}
-button{cursor: pointer;}
+button{cursor: pointer; background-color: unset;}
 button::-moz-focus-inner {padding:0;border:0;}
 a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
