--- a/connect-four-game/scss/game.scss
+++ b/connect-four-game/scss/game.scss
@@ -2,13 +2,169 @@
 
 body {
     background-color: $light-purple;
+    display: grid;
+    column-gap: min(3vw, 60px);
+    grid-template-columns: 1fr 632px 1fr;
+    grid-template-rows: 17vh 1fr;
+    grid-template-areas:
+    ". header ."
+    "player1 game player2"
+    ;
 }
 
-.container {
-    max-width: 632px;
-    margin: 0 auto;
+header {
+    grid-area: header;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .logo {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
+#menu {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+
+    h1 {
+        color: white;
+        text-transform: uppercase;
+        margin-bottom: 40px;
+    }
+}
+
+#rules {
+    background-color: $light-purple;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    text-align: left;
+
+    h1 {
+        text-align: center;
+    }
+
+    h3 {
+        color: $light-purple;
+        padding-bottom: 16px;
+        padding-top: 29px;
+    }
+
+    li {
+        padding-left: 27px;
+        position: relative;
+        list-style: none;
+        margin-bottom: 10px;
+
+        &::before {
+            content:counter(list-item);
+            position: absolute;
+            left: 0;
+            top: 0;
+            font-family: 'Space Grotesk';
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 21px;
+            text-transform: uppercase;
+        }
+    }
+
+    button {
+        position: absolute;
+        bottom: -40px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+main {
+    grid-area: game;
+
+    
+    ul {
+        &.marker::before {
+            content: $marker-img;
+            width: 38px;
+            height: 37px;
+            position: absolute;
+            top: -48px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        position: relative;
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        transition: 1s all;
+    }
+    
+    li {
+        height: 87.5px;
+        transition: 1s all;
+    }
+    
+    .white-board {
+        position: absolute;
+        left: 0;
+        top: 0;
+        user-select: none;
+    }
+
+    .counter {
+        position: relative;
+
+        &.red {
+            background: url(../assets/images/counter-red-large.svg) no-repeat;
+            background-position: center;
+        }
+        &.yellow {
+            background: url(../assets/images/counter-yellow-large.svg) no-repeat;
+            background-position: center;
+        }
+        &.win:after {
+            content: '';
+            position: absolute;
+            width: 34px;
+            height: 34px;
+            left: 50%;
+            top: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            border: solid 6px $white;
+            border-radius: 50%;
+        }
+    }
+
+    .turn {
+        background: url(../assets/images/turn-background-red.svg) no-repeat;
+        width: 197px;
+        height: 167px;  
+        padding: 40px 0 16px;
+        text-align: center;
+        margin: -50px auto;
+        position: relative;
+        z-index: 3;
+        h1 {
+            text-transform: unset;
+        }
+    }
+
+}
 .game-container {
     position: relative;
 }
@@ -17,30 +173,50 @@ body {
     background-image: url(../assets/images/board-layer-black-large.svg);
     height: 594px;
     display: flex;
-    padding: 8px 8px 52px;
+    padding: 8px 8px 57px;
 }
 
-ul {
-    width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
-    transition: 1s all;
-}
-li {
-    height: 88px;
-    transition: 1s all;
+
+
+aside {
+    position: relative;
+    box-shadow: $box-shadow;
+    background-color: $white;
+    border-radius: $btn-radius;
+    border: $border;
+    text-align: center;
+    align-self: flex-start;
+    width: 140px;
+    height: 160px;
+    padding: 46px 0 0;
+    margin-top: 195px;
 }
 
-.white-board {
+aside img {
+position: absolute;
+top: -29.5px;
+left: 50%;
+transform: translateX(-50%);
+
+}
+
+.player-1 {
+    grid-area: player1;
+    justify-self: end;
+}
+
+.player-2 {
+    grid-area: player2;
+    justify-self: start;
+}
+
+footer {
+    background-color: $dark-purple;
     position: absolute;
+    bottom: 0;
     left: 0;
-    top: 0;
-    user-select: none;
-}
-
-.counter {
-    display: block;
-    transition: 1s all;
-    margin: 0 auto;
-    padding: 9px;
+    right: 0;
+    top: calc(17vh + 544px);
+    z-index: -1;
+    border-radius: 60px 60px 0px 0px;
 }
