--- a/connect-four-game/scss/game.scss
+++ b/connect-four-game/scss/game.scss
@@ -98,21 +98,36 @@ main {
 
     
     ul {
-        &.marker::before {
-            content: $marker-img;
-            width: 38px;
-            height: 37px;
-            position: absolute;
-            top: -48px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
         position: relative;
         width: 100%;
         display: flex;
         flex-direction: column-reverse;
         transition: 1s all;
+
+        &.marker {
+            cursor: pointer;
+            &.red::before {
+                content: url(../assets/images/marker-red.svg);
+                width: 38px;
+                height: 37px;
+                position: absolute;
+                top: -48px;
+                left: 50%;
+                transform: translateX(-50%);
+
+                }
+            &.yellow::before {
+                content: url(../assets/images/marker-yellow.svg);
+                width: 38px;
+                height: 37px;
+                position: absolute;
+                top: -48px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
     }
+
     
     li {
         height: 87.5px;
@@ -124,6 +139,7 @@ main {
         left: 0;
         top: 0;
         user-select: none;
+        pointer-events:none;
     }
 
     .counter {
