--- a/connect-four-game/scss/_general.scss
+++ b/connect-four-game/scss/_general.scss
@@ -132,11 +132,11 @@ p {
         background: $red;
         border: $border;
         box-shadow: $box-shadow;
-        padding: 20px 21px 20px;
         width: 100%;
         font-size: 24px;
+        line-height: 31px;
         color: $white;
-        padding: 13px 17px 13px 20px; 
+        padding: 21px 20px 20px;; 
     }
  }
 
