--- a/connect-four-game/css/main-menu.css
+++ b/connect-four-game/css/main-menu.css
@@ -191,11 +191,11 @@ body {
   background: hsl(347, 97%, 70%);
   border: 3px solid hsl(0, 0%, 0%);
   box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
-  padding: 20px 21px 20px;
   width: 100%;
   font-size: 24px;
+  line-height: 31px;
   color: hsl(0, 0%, 100%);
-  padding: 13px 17px 13px 20px;
+  padding: 21px 20px 20px;
 }
 
 .hidden {
