--- a/connect-four-game/scss/game.scss
+++ b/connect-four-game/scss/game.scss
@@ -35,6 +35,7 @@ header {
     align-items: center;
     justify-content: center;
     z-index: 10;
+    transition: all 500ms;
 
     h1 {
         color: white;
@@ -55,6 +56,7 @@ header {
     justify-content: center;
     z-index: 10;
     text-align: left;
+    transition: all 500ms;
 
     h1 {
         text-align: center;
@@ -85,7 +87,7 @@ header {
         }
     }
 
-    button {
+    a {
         position: absolute;
         bottom: -40px;
         left: 50%;
@@ -180,6 +182,22 @@ main {
         }
     }
 
+    .wins {
+        background-color: $white;
+        width: 285px;
+        padding: 17px;
+        text-align: center;
+        position: relative;
+        border: $border;
+        box-shadow: $box-shadow;
+        border-radius: $radius;
+        margin: -50px auto;
+        z-index: 3;
+        h1 {
+            margin-top: -4px;
+        }
+    }
+
 }
 .game-container {
     position: relative;
@@ -191,8 +209,6 @@ main {
     display: flex;
     padding: 8px 8px 57px;
 }
-
-
 
 aside {
     position: relative;
