--- a/connect-four-game/css/game.css
+++ b/connect-four-game/css/game.css
@@ -169,6 +169,10 @@ body {
   align-items: center;
   padding: 13px 17px 13px 20px;
 }
+.button.primary:hover {
+  border: 3px solid hsl(257, 67%, 51%);
+  box-shadow: 0px 10px 0px hsl(257, 67%, 51%);
+}
 .button.secondary {
   background: hsl(0, 0%, 100%);
   border: 3px solid hsl(0, 0%, 0%);
@@ -178,6 +182,11 @@ body {
   font-size: 24px;
   color: hsl(0, 0%, 0%);
   padding: 21px 20px 20px;
+  line-height: 31px;
+}
+.button.secondary:hover {
+  border: 3px solid hsl(257, 67%, 51%);
+  box-shadow: 0px 10px 0px hsl(257, 67%, 51%);
 }
 .button.tetriary {
   background-color: hsl(257, 67%, 51%);
@@ -187,15 +196,12 @@ body {
   text-align: center;
   padding: 9px 20px 10px;
 }
+.button.tetriary:hover {
+  background-color: hsl(347, 97%, 70%);
+}
 .button.red {
   background: hsl(347, 97%, 70%);
-  border: 3px solid hsl(0, 0%, 0%);
-  box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
-  width: 100%;
-  font-size: 24px;
-  line-height: 31px;
   color: hsl(0, 0%, 100%);
-  padding: 21px 20px 20px;
 }
 
 .hidden {
@@ -287,6 +293,14 @@ header .logo {
   bottom: -40px;
   left: 50%;
   transform: translateX(-50%);
+}
+#rules a:hover:after {
+  content: url(../assets/images/icon-check-hover.svg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 main {
