--- a/connect-four-game/scss/_general.scss
+++ b/connect-four-game/scss/_general.scss
@@ -109,6 +109,10 @@ p {
         justify-content: space-between;
         align-items: center;
         padding: 13px 17px 13px 20px;
+        &:hover {
+            border: 3px solid $dark-purple;
+            box-shadow: 0px 10px 0px $dark-purple;
+        }
     }
     &.secondary {
         background: $white;
@@ -119,6 +123,11 @@ p {
         font-size: 24px;
         color: $black;
         padding: 21px 20px 20px;
+        line-height: 31px;
+        &:hover {
+            border: 3px solid $dark-purple;
+            box-shadow: 0px 10px 0px $dark-purple;
+        }
     } 
     &.tetriary {
         background-color: $dark-purple;
@@ -127,17 +136,16 @@ p {
         line-height: 20px;
         text-align: center;
         padding: 9px 20px 10px;
+        &:hover {
+            background-color: $red;
+        }
     }
     &.red {
         background: $red;
-        border: $border;
-        box-shadow: $box-shadow;
-        width: 100%;
-        font-size: 24px;
-        line-height: 31px;
         color: $white;
-        padding: 21px 20px 20px;; 
     }
+
+
  }
 
 //  Activations
