--- a/connect-four-game/scss/game.scss
+++ b/connect-four-game/scss/game.scss
@@ -92,6 +92,14 @@ header {
         bottom: -40px;
         left: 50%;
         transform: translateX(-50%);
+        &:hover:after {
+            content: url(../assets/images/icon-check-hover.svg);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
