--- a/connect-four-game/css/game.css
+++ b/connect-four-game/css/game.css
@@ -135,7 +135,7 @@ body {
   border: 3px solid hsl(0, 0%, 0%);
   box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   max-width: 480px;
-  width: 95%;
+  width: 89%;
 }
 .menu-container.white {
   background-color: hsl(0, 0%, 100%);
@@ -209,6 +209,10 @@ body {
   visibility: hidden;
 }
 
+html {
+  position: relative;
+}
+
 body {
   background-color: hsl(257, 100%, 64%);
   display: grid;
@@ -247,6 +251,7 @@ header .logo {
   color: white;
   text-transform: uppercase;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 #rules {
@@ -402,9 +407,17 @@ main .wins h1 {
 
 .game-box {
   background-image: url(../assets/images/board-layer-black-large.svg);
+  background-repeat: no-repeat;
   height: 594px;
   display: flex;
   padding: 8px 8px 57px;
+}
+
+.white-board {
+  background-image: url(../assets/images/board-layer-white-large.svg);
+  background-repeat: no-repeat;
+  height: 594px;
+  width: 100%;
 }
 
 aside {
@@ -420,7 +433,6 @@ aside {
   padding: 46px 0 0;
   margin-top: 195px;
 }
-
 aside img {
   position: absolute;
   top: -29.5px;
@@ -447,4 +459,163 @@ footer {
   top: calc(17vh + 544px);
   z-index: -1;
   border-radius: 60px 60px 0px 0px;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    margin: 0 auto;
+    max-width: 632px;
+    width: 89%;
+    column-gap: 40px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 114px 1fr;
+    grid-template-areas: "header header" "player1 player2" "game game";
+  }
+  main ul.marker {
+    cursor: pointer;
+  }
+  main ul.marker.red::before {
+    content: "";
+  }
+  main ul.marker.yellow::before {
+    content: "";
+  }
+  aside {
+    position: relative;
+    text-align: center;
+    align-self: flex-start;
+    width: calc(100% - 27px);
+    height: 100px;
+    padding: 14px 40px;
+    margin-top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+  aside img {
+    top: 50%;
+    transform: translateY(-50%);
+    left: -27px;
+  }
+  aside.player-1 {
+    justify-self: start;
+    margin-left: 24px;
+  }
+  aside.player-2 {
+    flex-direction: row-reverse;
+    justify-self: end;
+    margin-right: 24px;
+  }
+  aside.player-2 img {
+    right: -27px;
+    left: unset;
+  }
+  footer {
+    top: 790px;
+  }
+  footer:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 400%;
+    background-color: hsl(257, 67%, 51%);
+    border-radius: 60px 60px 0px 0px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .button.tetriary {
+    min-width: 108px;
+  }
+  body {
+    margin: 0 auto;
+    max-width: 632px;
+    column-gap: 14px;
+    grid-template-rows: 114px 80px 1fr;
+    grid-template-areas: "header header" "player1 player2" "game game";
+  }
+  header .logo {
+    width: 40px;
+  }
+  .game-box {
+    background-image: url(../assets/images/board-layer-black-small.svg);
+    height: auto;
+    background-size: contain;
+    width: 100%;
+    height: 84.995vw;
+    padding: 0 1.5% 9.5%;
+  }
+  main {
+    margin-top: 50px;
+  }
+  main li {
+    height: 12.3964285714vw;
+  }
+  main .counter.red {
+    background-size: contain;
+  }
+  main .counter.yellow {
+    background-size: contain;
+  }
+  main .counter.win:after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    top: 40%;
+    transform: translateX(-50%) translateY(-50%);
+    border: solid 6px hsl(0, 0%, 100%);
+    border-radius: 50%;
+  }
+  main .turn {
+    background: url(../assets/images/turn-background-red.svg) no-repeat;
+    margin: -7vw auto;
+  }
+  main .wins {
+    border: 3px solid hsl(0, 0%, 0%);
+    box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
+    border-radius: 20px;
+    margin: -7vw auto;
+  }
+  .white-board {
+    background-image: url(../assets/images/board-layer-white-small.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: auto;
+    width: 100%;
+    height: 82.325vw;
+  }
+  aside {
+    height: 80px;
+    padding: 10px 0px;
+    margin-top: 0;
+    flex-direction: column;
+  }
+  aside h1 {
+    font-size: 32px;
+    line-height: 41px;
+  }
+  aside h3 {
+    font-size: 16px;
+    line-height: 21px;
+  }
+  aside.player-2 {
+    flex-direction: column;
+  }
+  footer {
+    top: 65vh;
+  }
+  footer:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    background-color: hsl(257, 67%, 51%);
+    border-radius: 60px 60px 0px 0px;
+  }
 }/*# sourceMappingURL=game.css.map */
