--- a/connect-four-game/css/main-menu.css
+++ b/connect-four-game/css/main-menu.css
@@ -135,7 +135,7 @@ body {
   border: 3px solid hsl(0, 0%, 0%);
   box-shadow: 0px 10px 0px hsl(0, 0%, 0%);
   max-width: 480px;
-  width: 95%;
+  width: 89%;
 }
 .menu-container.white {
   background-color: hsl(0, 0%, 100%);
@@ -222,4 +222,17 @@ body {
 
 .button {
   text-align: left;
+}
+
+@media screen and (max-width: 730px) {
+  body {
+    background-color: hsl(257, 100%, 64%);
+    padding: 0 0 30%;
+  }
+  .menu-container.mainscreen {
+    background-color: transparent;
+    border: unset;
+    box-shadow: unset;
+    padding: 0;
+  }
 }/*# sourceMappingURL=main-menu.css.map */
