--- a/test/style.css
+++ b/test/style.css
@@ -1,35 +1,33 @@
-.pacman-btn {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #ffc107;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 10px;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  
-  .pacman-btn:hover:before {
-    content: '';
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    width: calc(100% + 20px);
-    height: calc(100% + 20px);
-    background-image: url('https://i.imgur.com/tDoN9RK.gif');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    animation: eat 0.5s steps(4) forwards;
-  }
-  
-  @keyframes eat {
-    from {
-      background-position-x: 0%;
-    }
-    to {
-      background-position-x: 100%;
-    }
-  }
+div {
+  position: relative;
+}
+
+img {
+  width: 100%;
+  z-index: 0;
+  display: block;
+}
+
+div:after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #F7DD04;  
+  z-index: 2;
+  mix-blend-mode: difference;
+}
+
+div:before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #F7DD04;  
+  z-index: 3;
+  mix-blend-mode: hard-light;
+}
