--- a/interactive-card-details-form-main/css/styles.css
+++ b/interactive-card-details-form-main/css/styles.css
@@ -87,6 +87,8 @@ body {
   width: 100%;
   max-width: 33%;
   background-color: #21092F;
+  background-image: url(../images/bg-main-desktop.png);
+  background-size: cover;
   display: flex;
   align-items: center;
   position: relative;
@@ -99,19 +101,46 @@ body {
   height: 100%;
   max-height: 245px;
   position: absolute;
+  filter: drop-shadow(0px 39px 60px rgba(0, 0, 0, 0.14));
+}
+.card #cardNumber {
+  color: #FFFFFF;
+  font-size: 28px;
+  letter-spacing: 3.422px;
+}
+.card .card-text {
+  color: #FFFFFF;
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 .card.front {
   border-radius: 10px;
-  background: linear-gradient(164deg, #6348FE 4.74%, #610595 88.83%);
+  background: url(../images/bg-card-front.png);
+  background-size: cover;
   right: -128px;
   top: 50%;
   transform: translateY(-105%);
+  padding: 28px 32px;
+  display: grid;
+  grid-template-rows: 1fr auto auto;
+  gap: 31px;
+}
+.card.front div {
+  display: flex;
+  justify-content: space-between;
 }
 .card.back {
-  background: linear-gradient(169deg, #FFF 5%, #D2D3D9 91.69%);
+  background: url(../images/bg-card-back.png);
+  background-size: cover;
   right: -223px;
   top: 50%;
   transform: translateY(5%);
+}
+.card.back p {
+  position: absolute;
+  top: 114px;
+  right: 57px;
 }
 
 main {
@@ -119,6 +148,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 12%;
 }
 main form {
   display: flex;
@@ -129,7 +159,7 @@ main form {
 }
 main form .horizontal {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 main label {
   width: 100%;
@@ -137,6 +167,16 @@ main label {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 2px;
+}
+main label.cvc {
+  margin-left: 10px;
+}
+main .errorMessage {
+  color: #FF5050;
+  font-size: 12px;
+  text-transform: none;
+  letter-spacing: 0;
+  margin-top: 8px;
 }
 main input {
   width: 100%;
@@ -151,14 +191,119 @@ main input {
 main input::placeholder {
   opacity: 0.25;
 }
-main input[type=button] {
+main input:focus {
+  color: #21092F;
+  border: 1px solid #6348FE;
+}
+main input.invalid {
+  border: 1px solid #FF5050;
+}
+main input[type=submit] {
   border-radius: 8px;
   font-size: 18px;
   color: #FFFFFF;
   background-color: #21092F;
   padding: auto 15px;
   height: auto;
+  cursor: pointer;
+  transition: all 0.15s;
+  outline: none;
 }
-main input .cvc {
-  margin-left: 20px;
+main input[type=submit]:hover {
+  filter: brightness(150%);
+}
+
+.thank-you {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 381px;
+  width: 100%;
+}
+.thank-you h1 {
+  color: #21092F;
+  font-size: 28px;
+  letter-spacing: 3.422px;
+  margin: 35px auto 16px;
+}
+.thank-you p {
+  color: #8F8694;
+  font-size: 18px;
+  margin-bottom: 48px;
+}
+
+.hidden {
+  display: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+@media screen and (max-width: 1200px) {
+  body {
+    display: block;
+  }
+  .side {
+    width: 100%;
+    max-width: none;
+    min-height: 240px;
+    background-image: url(../images/bg-main-mobile.png);
+  }
+  main {
+    padding: 16px;
+    padding-top: max(90px, 15vh);
+  }
+  .card {
+    border-radius: 6px;
+    width: 80vw;
+    max-width: 286px;
+    height: 156px;
+    max-height: 245px;
+    position: absolute;
+    filter: drop-shadow(0px 39px 60px rgba(0, 0, 0, 0.14));
+  }
+  .card #cardNumber {
+    font-size: 18px;
+    letter-spacing: 2.2px;
+  }
+  .card .card-text {
+    font-size: 9px;
+    letter-spacing: 1.286px;
+  }
+  .card.front {
+    right: 0;
+    left: 50%;
+    top: 123px;
+    transform: translateX(-65%);
+    padding: 19px 16px;
+    display: grid;
+    grid-template-rows: 1fr auto auto;
+    gap: 17px;
+    z-index: 1;
+    margin: 0 17px;
+  }
+  .card.front img {
+    height: 30px;
+  }
+  .card.back {
+    right: 50%;
+    top: 35px;
+    transform: translateX(65%);
+    margin: 0 17px;
+  }
+  .card.back p {
+    position: absolute;
+    top: 73px;
+    right: 37px;
+  }
+  form {
+    gap: 20px;
+  }
 }/*# sourceMappingURL=styles.css.map */
