--- a/main.css
+++ b/main.css
@@ -51,6 +51,12 @@ h1 {
     font-weight: 600;
 }
 
+h2 {
+    font-size: 2.6rem;
+    text-align: left;
+    font-weight: 600;
+}
+
 h3 {
     padding: 1.2em 0 0.6em;
     font-size: 1.7rem;
@@ -91,10 +97,15 @@ a {
     margin-top: 0px;
 }
 
-    .items-container {
+.section-header {
+    margin-bottom: 4.5vh;
+}
+
+.items-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 32px;
+    margin-bottom: 10vh;
 }
 
 .item {
